Refactored multifarce.js into 16 files. Changed event handling to use event delegation, which should improve performance. Fixed a few minor bugs.

--- a/app/media/style.css
+++ b/app/media/style.css
@@ -215,6 +215,10 @@ textarea
     background: #5b3;
 }
 
+#notifications span.close {
+    float: right;
+}
+
 #page-name {
     background: #444;
     color: #eee;
