Added top entered, but not created, commands to Create page. Made pages requiring login wait for user state to load. Other minor improvements to the interface.

--- a/app/media/style.css
+++ b/app/media/style.css
@@ -343,9 +343,18 @@ input.text
 }
 
 button {
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#fff), to(#ddd));
+    border: 1px solid #999;
+    border-radius: 3px;
+    -khtml-border-radius: 3px;
+    -moz-border-radius: 3px;
     float: right;
-    padding: 2px 0;
+    padding: 5px 0;
     width: 160px;
+}
+
+button:active {
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#ccc), to(#ddd));
 }
 
 div.info {
