--- a/app/media/style.css
+++ b/app/media/style.css
@@ -343,7 +343,8 @@ input.text
 }
 
 button {
-    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#fff), to(#ddd));
+    background-color: #eee;
+    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#fff), to(#ddd));
     border: 1px solid #999;
     border-radius: 3px;
     -khtml-border-radius: 3px;
@@ -354,7 +355,8 @@ button {
 }
 
 button:active {
-    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#ccc), to(#ddd));
+    background-color: #d4d4d4;
+    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#ccc), to(#ddd));
 }
 
 div.info {
